# renovate-poetry-dependency-groups

./: README.md
poetry_with_dependency_groups/: pyproject.toml
poetry_without_dependency_groups/: pyproject.toml
