[tool.poetry]
name = "poetry-without-dependency-groups"
version = "0.1.0"
description = "Showcase Poetry without dependency groups."
authors = []

[tool.poetry.dependencies]
python = "^3.10"
orjson = "3.8.0"
redis = { extras = ["hiredis"], version = "4.3.3" }
SQLAlchemy = { extras = ["postgresql_asyncpg"], version = "1.4.40" }
starlette = "0.20.0"

[tool.poetry.dev-dependencies]
mypy = "1.4.1"
pytest = "7.1.0"
sqlalchemy2-stubs = "0.0.2a27"
types-redis = "4.3.19"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
